Fix color picker container being stretched on mobile

--- a/sass/_color-picker.scss
+++ b/sass/_color-picker.scss
@@ -1,4 +1,5 @@
 .color-picker-container{
+    display: inline-block;
     position: relative;
     z-index: 100;
     box-shadow: -1px 2px 4px rgba(0,0,0,0.3);
